--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.1/css/mdb.min.css"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
+    <script>
+      // VConsole will be exported to `window.VConsole` by default.
+      var vConsole = new window.VConsole();
+    </script>
     <link rel="stylesheet" href="index.css" type="text/css" />
   </head>
 
